# Rust-RepoArch

./: README.md
calc_primes_to_n/: Cargo.toml
calc_primes_to_n/src/: main.rs
file_word_counter/: Cargo.toml
file_word_counter/data_files/: data.txt
file_word_counter/src/: archive.rs  main.rs
libraryCrates/input_conv/: Cargo.toml  README.md
libraryCrates/input_conv/src/: input_conv.rs  userin_conv.rs
library_test/: Cargo.toml
library_test/data_files/: int_numbers.txt
library_test/src/: main.rs
number_guessing_game/: Cargo.toml
number_guessing_game/src/: main.rs
simple_calculator/src/: main.rs
word_counter/: Cargo.toml
word_counter/src/: main.rs
